[package]
name = "rust_vcd_wasm"
version = "0.1.0"
authors = ["msBRF65 <msaito6525@gmail.com>"]
description = "wasm vcd parser"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vcd = "0.7.0"
wasm-bindgen = "0.2.87"
